--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -4,30 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body {
-            height: 100vh;
-            background-color: black;
+           height: 100vh;
+            /*background-color: black;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
             background-size: cover;
-        }
+            background-attachment: fixed; */
+
+            /* Shorthand - background
+                 color > image > position > repeat > [size] > attachment
+                 */
+                 
+                 background: black url("imagens/wallpaper002.jpg") center center no-repeat fixed;
+                 background-size: cover;
+
+            }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
-            border-radius: 15px;
+            border-radius: 15px; 
+
+            }
            
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur facilis consequatur repellat obcaecati necessitatibus, sunt, dicta dignissimos laborum vero cum!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur corporis eos necessitatibus reprehenderit, harum porro sint nemo, placeat voluptate velit aliquid aperiam eveniet modi dicta id fuga ab excepturi quam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus unde sed earum incidunt provident? Laborum minus, architecto excepturi dolore nemo, asperiores error non facere nulla officiis illum quia aperiam qui. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, unde quis! Ea alias minus eligendi aliquid esse ratione aspernatur 
     </main>
 </body>
