--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -34,8 +34,8 @@
         }
 
         a:hover {
-            color: deeppink;
-            text-decoration: underline;
+            font-weight: bolder;
+            
         }
     </style>
 </head>
