--- a/exercícios/ex023/tabela006.html
+++ b/exercícios/ex023/tabela006.html
@@ -39,7 +39,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quisquam iste nulla in dicta dolores pariatur rerum voluptates incidunt corrupti aliquam atque, illo eligendi quibusdam harum quas reprehenderit, odit iure!</p>
     <div id="container">
         <table>
-            <caption>Tabelas responsivas</caption>
+            <caption>Venda de produto por mês</caption>
             <thead>
                 <tr>
                     <th>Produto</th>
