--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi hic animi quam quisquam illum ea, aliquid maiores recusandae amet deserunt architecto molestias asperiores quos explicabo ex veniam ducimus repudiandae. Nam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis non dolorem dolores placeat, eius porro, esse nam facere nihil doloremque repellendus! Dolore, autem labore impedit quia sapiente officia id maxime.</p>
 
-   <iframe id="tela" name="frame" srcdoc="<h1> Escolha uma das opções acima </h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi hic animi quam quisquam illum ea, aliquid maiores recusandae amet deserunt architecto molestias asperiores quos explicabo ex veniam ducimus repudiandae. Nam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis non dolorem dolores placeat, eius porro, esse nam facere nihil doloremque repellendus! Dolore, autem labore impedit quia sapiente officia id maxime.</p>"> 
+   <iframe id="tela" name="frame" srcdoc="<h1> Escolha uma das opções acima </h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi hic animi quam quisquam illum ea, aliquid maiores recusandae amet deserunt architecto molestias asperiores quos explicabo ex veniam ducimus repudiandae. Nam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis non dolorem dolores placeat, eius porro, esse nam facere nihil doloremque repellendus! Dolore, autem labore impedit quia sapiente officia id maxime.</p><img src= imagens/cursoemvideo.png "> 
     <p>Infelizmente seu navegador não é compativel com isso
     </p>
    </iframe>
