--- a/exercícios/ex025/form006.html
+++ b/exercícios/ex025/form006.html
@@ -9,7 +9,15 @@
 <body>
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
+        <p>
+            <label for="icor">Cor</label>
+            <input type="color" name="cor" id="icor">
+        </p>
 
+        <p>
+            <label for="inivel">Nivel de satisfação</label>
+            <input type="range" name="nivel" id="inivel">
+        </p>
 
         <p>
             <input type="submit" value="Enviar">
