--- a/exercícios/ex025/form006.html
+++ b/exercícios/ex025/form006.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on">
+    <form action="cadastro.php" method="POST" autocomplete="on">
         <p>
             <label for="icor">Cor</label>
             <input type="color" name="cor" id="icor">
@@ -16,7 +16,11 @@
 
         <p>
             <label for="inivel">Nivel de satisfação</label>
-            <input type="range" name="nivel" id="inivel">
+            <input type="range" name="nivel" id="inivel" min="1" max="5" value="1">
+        </p>
+
+        <p><label for="ifoto">Foto do Perfil</label>
+           <input type="file" name="foto" id="ifoto">
         </p>
 
         <p>
